# abulafia

./: .clang-format  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  CONTRIBUTING.md  README.md  appveyor.yml  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml
cmake/: code-coverage.cmake  concat.cmake
data_sources/container_sequence/: index.html
data_sources/single_forward/: index.html
docs/: index.md  reference.md
docs/guide/: 00_introduction.md  01_installation.md  02_introduction.md  02_parsers.md  03_skippers.md  04_resumable_parsers.md  05_actions.md  06_recursivity.md  07_character_sets.md  08_working_with_structs.md
docs/guide/advanced/: 00_writing_parsers.md
examples/: CMakeLists.txt
examples/math_expression/: CMakeLists.txt  main.cpp
guide/00_introduction/: index.html
guide/01_installation/: index.html
guide/02_introduction/: index.html
guide/02_parsers/: index.html
guide/03_skippers/: index.html
guide/04_resumable_parsers/: index.html
guide/05_actions/: index.html
guide/06_recursivity/: index.html
guide/07_character_sets/: index.html
guide/08_working_with_structs/: index.html
guide/advanced/00_writing_parsers/: index.html
include/abulafia/: abulafia.h  abulafia_all.h  archetypes.h  assert.h  config.h  context.h  data_source.h  op_result.h  parse.h  parse_error.h  parser.h  pattern.h  patterns.h  patterns_api.h  policies.h  policy.h  result.h  stdlib_utils.h  token.h  traits.h  utils.h
include/abulafia/char_set/: any.h  char_set.h  delegated.h  not.h  operators.h  or.h  range.h  set.h  single.h
include/abulafia/contexts/: container_sequence.h  single_forward.h
include/abulafia/data_source/: container_sequence.h  single_forward.h  skipper_adapter.h
include/abulafia/dst_wrapper/: collection_wrapper.h  select_wrapper.h  value_wrapper.h
include/abulafia/operations/: decode.h  make_parser.h  parse.h
include/abulafia/parsers/: coro.h  immediate.h
include/abulafia/parsers/coro/: child_operation.h  context.h  discard.h  except.h  list.h  misc.h  operation.h  optional.h  parser.h  repeat.h  tok.h
include/abulafia/parsers/coroutine/: all.h  dst_behavior.h  list.h  parser_factory.h  recur.h  requirements.h  with_skipper.h
include/abulafia/parsers/coroutine/adapters/: atomic.h  clean_failure.h  skip.h
include/abulafia/parsers/helpers/: digit_values.h
include/abulafia/parsers/imm/: README.md  discard.h  lit.h  misc.h  opt.h  repeat.h  tok.h
include/abulafia/parsers/immediate/: README.md  discard.h  misc.h  parser.h  repeat.h  tok.h
include/abulafia/patterns/: all.h  discard.h  eoi.h  fail.h  lit.h  misc.h  operators.h  opt.h  pass.h  pattern.h  recur.h  repeat.h  tok.h  traits.h  with_skipper.h
include/abulafia/patterns/binary/: except.h  list.h
include/abulafia/patterns/helpers/: buffer.h  collection_assign_wrapper.h
include/abulafia/patterns/leaf/: char_literal.h  char_symbol.h  character.h  eoi.h  fail.h  leaf_pattern.h  pass.h  string_literal.h  string_symbol.h
include/abulafia/patterns/nary/: alternative.h  nary.h  nary_pattern.h  sequence.h
include/abulafia/patterns/unary/: action.h  attr_cast.h  bind_dst.h  construct.h  discard.h  lexeme.h  not.h  optional.h  repeat.h
include/abulafia/support/: assert.h  function_traits.h  nil.h  type_traits.h  variant_utils.h  visit_val.h
misc/: header_compiler.py  notice.txt
mkdocs/: search_index.json
patterns/action/: index.html
patterns/binary/except/: index.html
patterns/binary/list/: index.html
patterns/leaf/Symbol/: index.html
patterns/leaf/character/: index.html
patterns/leaf/eoi/: index.html
patterns/leaf/fail/: index.html
patterns/leaf/literal/: index.html
patterns/leaf/numeric/int/: index.html
patterns/leaf/pass/: index.html
patterns/nary/alternative/: index.html
patterns/nary/sequence/: index.html
patterns/recur/: index.html
patterns/reference/: index.html
patterns/unary/not/: index.html
patterns/unary/repeat/: index.html
reference/: index.html
scripts/: compile_header.py
tests/: CMakeLists.txt  abu_test_utils.h  test_discard.cpp  test_except.cpp  test_lit.cpp  test_main.cpp  test_misc.cpp  test_opt.cpp  test_recur.cpp  test_repeat.cpp  test_result.cpp  test_tok.cpp  test_utils.h
tests/char_set/: CMakeLists.txt  test_any.cpp  test_delegated.cpp  test_not.cpp  test_or.cpp  test_range.cpp  test_set.cpp  test_single.cpp
tests/contexts/: CMakeLists.txt  test_container_sequence.cpp  test_single_forward.cpp  test_skipper.cpp
tests/data_sources/: CMakeLists.txt  test_container_sequence.cpp  test_single_forward.cpp
tests/documentation/: CMakeLists.txt  test_readme.cpp
tests/header_sanitizer/: CMakeLists.txt  pattern.cpp  result.cpp  traits.cpp
tests/header_sanitizer/char_set/: any.cpp  char_set.cpp  delegated.cpp  not.cpp  operators.cpp  or.cpp  range.cpp  set.cpp  single.cpp
tests/header_sanitizer/context/: single_forward.cpp
tests/header_sanitizer/operations/: parse.cpp
tests/header_sanitizer/patterns/: operators.cpp
tests/header_sanitizer/patterns/binary/: except.cpp  list.cpp
tests/header_sanitizer/patterns/helpers/: buffer.cpp  collection_assign_wrapper.cpp
tests/header_sanitizer/patterns/leaf/: char_literal.cpp  char_symbol.cpp  character.cpp  eoi.cpp  fail.cpp  pass.cpp  string_literal.cpp  string_symbol.cpp
tests/header_sanitizer/patterns/leaf/numeric/: digit_values.cpp  int.cpp  uint.cpp
tests/header_sanitizer/patterns/nary/: alternative.cpp  nary.cpp
tests/header_sanitizer/patterns/unary/: action.cpp  attr_cast.cpp  not.cpp  repeat.cpp
tests/header_sanitizer/support/: function_traits.cpp  nil.cpp  type_traits.cpp
tests/operations/: CMakeLists.txt  test_make_parser.cpp
tests/patterns/: CMakeLists.txt  test_action.cpp  test_alternative.cpp  test_bind_dst.cpp  test_char_literal.cpp  test_character.cpp  test_digit_values.cpp  test_eoi.cpp  test_except.cpp  test_int.cpp  test_list.cpp  test_not.cpp  test_optional.cpp  test_pass_and_fail.cpp  test_recur.cpp  test_repeat.cpp  test_sequence.cpp  test_skipper.cpp  test_symbol.cpp  test_uint.cpp
(+25 files in other folders)
